--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +26,7 @@
     "import pandas as pd\n",
     "import json\n",
     "\n",
-    "with open(\"test.json\") as f:\n",
+    "with open(\"test.json\", 'r', encoding='utf-8') as f:\n",
     "    data = json.load(f)\n",
     "df = pd.json_normalize(data)\n",
     "# Save the dataframe to a JSON file\n",
@@ -28,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -57,11 +64,11 @@
       "4  At age 27, Moore will become a first-time star...   \n",
       "\n",
       "                                           embedding  \n",
-      "0  [0.03772561863181664, 0.0014692898350413344, 0...  \n",
-      "1  [0.023027036111747765, 0.023183478559131623, 0...  \n",
-      "2  [0.03152594023810689, 0.01123653946405356, 0.0...  \n",
-      "3  [0.03672978690628583, 0.026952403016536064, 0....  \n",
-      "4  [0.009536317616445402, 0.02582527052887001, 0....  \n"
+      "0  [0.0016207717972738, 0.01937443288120125, 0.04...  \n",
+      "1  [0.009245555736991512, 0.015824455490497057, 0...  \n",
+      "2  [0.0320456129770601, 0.041444850808393136, 0.0...  \n",
+      "3  [0.04340884534891932, 0.04158423096569584, 0.0...  \n",
+      "4  [0.003471366172636852, 0.01766802576387864, 0....  \n"
      ]
     }
    ],
@@ -85,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +111,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -118,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
